--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/home/force/opt/apache-tomcat-7.0.4/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-1.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fmjdbc.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
